Mon Mar 23 23:11:49 UTC 2009  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/Sig_Handler.cpp: Fixed a silly bug in the use of
          ACE_Fixed_Set_Iterator that was causing every other signal in
          ACE_Sig_Handlers to be skipped.  Thanks to Andreas_Drescher <ace
          at anticat dot ch> for reporting this bug.

Sun Mar 22 19:21:06 UTC 2009  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/Acceptor.cpp (accept_svc_handler): Zapped the 'const' before
          the 'bool'.

Fri Mar 20 13:40:47 UTC 2009  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/Acceptor.cpp (accept_svc_handler): Added a check for a NULL
          reactor to avoid a race condition.  Thanks to JD Robertson
          <JD.Robertson at ni dot com> for reporting this.

Sun Mar 22 06:46:22 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_Thread.cpp:
          For ACE_BEGINTHREADEX with WinCE only pas supported flags

Fri Mar 20 16:15:15 UTC 2009  Jeff Parsons <j.parsons@vanderbilt.edu>

        * THANKS:

          Updated email address for Max Khon.

Fri Mar 20 08:07:22 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_unistd.{h,inl}:
          Use correct type for pid and WinCE change

Thu Mar 19 16:07:22 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/config/acedefaults.mpb:
        * bin/MakeProjectCreator/config/svc_conf_files.mpb:
          Add all .conf and .conf.xml files to a Svc Conf Files group
          and use it for all ace/tao projects. That way any service
          config file is part of the generated visual studio solution
          which makes it easier to edit these files

Thu Mar 19 12:42:07 UTC 2009  Phil Mesnier  <mesnier_p@ociweb.com>

        * ace/OS_NS_unistd.inl:

          Further clean up to maintain style consistency in new dup()
          impl.

Thu Mar 19 11:57:46 UTC 2009  Phil Mesnier  <mesnier_p@ociweb.com>
